{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 29,
  "lineage": "6b009ddf-92c6-30b8-1190-ae9c5e4e1a9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0756b28b77d6a4b40",
            "arn": "arn:aws:ec2:us-east-1:971422703204:elastic-ip/eipalloc-0756b28b77d6a4b40",
            "domain": "vpc",
            "id": "eipalloc-0756b28b77d6a4b40",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-235-29-201.compute-1.amazonaws.com",
            "public_ip": "54.235.29.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:internet-gateway/igw-06b6c5d97050900fe",
            "id": "igw-06b6c5d97050900fe",
            "owner_id": "971422703204",
            "tags": {
              "Name": "captaintacticus-igw"
            },
            "tags_all": {
              "Name": "captaintacticus-igw"
            },
            "vpc_id": "vpc-0a31303a7407b6c6e"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0756b28b77d6a4b40",
            "association_id": "eipassoc-038654946794ac608",
            "connectivity_type": "public",
            "id": "nat-0fe1eb030d9c680e3",
            "network_interface_id": "eni-0eee4bd3b0011e818",
            "private_ip": "10.0.1.163",
            "public_ip": "54.235.29.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a0043bf1fde2862",
            "tags": {
              "Name": "captaintacticus-nat"
            },
            "tags_all": {
              "Name": "captaintacticus-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:route-table/rtb-001feadf53ed1da16",
            "id": "rtb-001feadf53ed1da16",
            "owner_id": "971422703204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe1eb030d9c680e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "captaintacticus-private-rt"
            },
            "tags_all": {
              "Name": "captaintacticus-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31303a7407b6c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:route-table/rtb-0b7a5199d701b95d7",
            "id": "rtb-0b7a5199d701b95d7",
            "owner_id": "971422703204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b6c5d97050900fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "captaintacticus-public-rt"
            },
            "tags_all": {
              "Name": "captaintacticus-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31303a7407b6c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0515b1bf2d1b01df7",
            "route_table_id": "rtb-001feadf53ed1da16",
            "subnet_id": "subnet-0c8fad00e79ed1a45"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abcb34cb3497eb66",
            "route_table_id": "rtb-001feadf53ed1da16",
            "subnet_id": "subnet-0c7628c96ca37ca9d"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027ffbe0bf585dcc0",
            "route_table_id": "rtb-0b7a5199d701b95d7",
            "subnet_id": "subnet-09a0043bf1fde2862"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eaf95aee857d77e",
            "route_table_id": "rtb-0b7a5199d701b95d7",
            "subnet_id": "subnet-07716f64f0b863981"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:subnet/subnet-0c8fad00e79ed1a45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8fad00e79ed1a45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422703204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "captaintacticus-private-1"
            },
            "tags_all": {
              "Name": "captaintacticus-private-1"
            },
            "vpc_id": "vpc-0a31303a7407b6c6e"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:subnet/subnet-0c7628c96ca37ca9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7628c96ca37ca9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422703204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "captaintacticus-private-2"
            },
            "tags_all": {
              "Name": "captaintacticus-private-2"
            },
            "vpc_id": "vpc-0a31303a7407b6c6e"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:subnet/subnet-09a0043bf1fde2862",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a0043bf1fde2862",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971422703204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "captaintacticus-public-1"
            },
            "tags_all": {
              "Name": "captaintacticus-public-1"
            },
            "vpc_id": "vpc-0a31303a7407b6c6e"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:subnet/subnet-07716f64f0b863981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07716f64f0b863981",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971422703204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "captaintacticus-public-2"
            },
            "tags_all": {
              "Name": "captaintacticus-public-2"
            },
            "vpc_id": "vpc-0a31303a7407b6c6e"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "captaintacticus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:vpc/vpc-0a31303a7407b6c6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-091162511e014313f",
            "default_route_table_id": "rtb-01fde67221de60852",
            "default_security_group_id": "sg-0f8eef349f4cd11ee",
            "dhcp_options_id": "dopt-02a424dd0ad7f08ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a31303a7407b6c6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fde67221de60852",
            "owner_id": "971422703204",
            "tags": {
              "Name": "captaintacticus"
            },
            "tags_all": {
              "Name": "captaintacticus"
            }
          }
        }
      ]
    }
  ]
}